<?xml version="1.0" encoding="utf-8"?>
<!--
 ! Excerpted from "Hello, Android",
 ! published by The Pragmatic Bookshelf.
 ! Copyrights apply to this code. It may not be used to create training material, 
 ! courses, books, articles, and the like. Contact us if you are in doubt.
 ! We make no guarantees that this code is fit for any purpose. 
 ! Visit http://www.pragmaticprogrammer.com/titles/eband3 for more book information.
-->
<resources>

    <!-- FINAL STRESS BLOCKER STUFF -->
	<string name="final_project_label">Final Project</string>
	<string name="sb_title_label">Stress Blocker</string>
    <string name="sb_contacts_label">View Stress Data</string>
    <string name="sb_settings_label">Edit Settings</string>
    <string name="sb_quit_label">Quit</string>
        <string-array name="sb_time_array">
        <item>4</item>
        <item>8</item>
        <item>12</item>
    </string-array>
    <string name="sb_time_choices_blurb">Choose a regular interval for the app to check your current stress level so that it may filter calls when appropriate.</string>
    <string name="sb_time_prompt">Periodic Survey Interval</string>
    <string name="sb_enable_filtering">Enable Call Filtering</string>
    <string name="sb_disable_filtering">Disable Call Filtering</string>
    <string name="sb_periodic_surveys_blurb">Enabling this feature will filter calls from stressful contacts when you are stressed.</string>
    <string name="sb_exclusion_list">Exclude Contacts from Filter</string> 
    <string name="sb_back">Back</string>
    <string name="sb_save">Save Settings</string>
    <string name="sb_active">Active</string>
    <string name="sb_inactive">Inactive</string>
    <string name="sb_survey_title">Rate Your Current Stress Level</string>
    <string name="sb_dont_know">I Don\'t Know!</string>
    <string name="sb_bt_identification_string">Can you identify this device:</string>
    <string name="sb_bt_identification">Bluetooth Device Identification</string>
    
    <!-- TRICKIEST PART STRESS BLOCKER STUFF -->
    <string name="tricky_stress_label">Trickiest Part</string>
    <string name="tricky_phone_survey_button_label">Enable Phonecall Surveys</string>
    <string name="tricky_phone_survey_button_disable_label">Disable Phonecall Surveys</string>
    <string name="tricky_phone_survey_info">Select this button to enable the app to prompt surveys both before and after a phone call.</string>
    <string name="tricky_periodic_survey_button_label">Prompt Periodic Survey</string>
    <string name="tricky_periodic_survey_info">Select this button to prompt a periodic survey. Includes a 12 sec bluetooth scan and will show devices seen 5 times when stressed.</string>
    <string name="tricky_quit">Quit</string>
    <string name="tricky_survey_title">Rate Your Current Stress Level</string>
    <string name="tricky_bluetooth_seen">The following device has been seen 5 times while you were stressed:</string>

    <!-- Main App Stuff -->
    <string name="app_name">NUMAD13-DanKreymer</string>
    <string name="main_title">Dan Kreymer</string>
    <string name="sudoku_title">Android Sudoku</string>
    <string name="dictionary_title">Test Dictionary</string>
    <string name="error_label">Generate Error</string>
    <string name="sudoku_label">Sudoku</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="about_label">About</string>
    <string name="quit_label">Quit</string>
    <string name="exit_label">Exit</string>
    <string name="settings_label">Settings...</string>
    <string name="settings_title">Sudoku settings</string>
    <string name="settings_shortcut">s</string>
    <string name="music_title">Music</string>
    <string name="music_summary">Play background music</string>
    <string name="hints_title">Hints</string>
    <string name="hints_summary">Show hints during play</string>
    <string name="new_game_title">Difficulty</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="hard_label">Hard</string>
    <string name="game_title">Game</string>
    <string name="no_moves_label">No moves</string>
    <string name="keypad_title">Keypad</string>
    <string name="about_title">About </string>
    <string name="about_text"> Dan Kreymer\n
      						  Email: dkreymer@gmail.com\n
                              IMEI: 359437042330580   </string>
    <string name="about_sudoku_title">About Android Sudoku</string>
    <string name="about_sudoku_text">\
Sudoku is a logic-based number placement puzzle.
Starting with a partially completed 9x9 grid, the
objective is to fill the grid so that each
row, each column, and each of the 3x3 boxes
(also called <i>blocks</i>) contains the digits
1 to 9 exactly once.</string>
    <string name="dictionary_label">Dictionary</string>
    <string name="return_to_menu_label">Return to Menu</string>
    <string name="clear_label">Clear</string>
    <string name="acknowledgements_label">Acknowledgements</string>
    <string name="word_box_text">Enter word here!</string>
    <string name="acknowledgements_dictionary_text">The "coin" sound effect used is from:\nhttp://themushroomkingdom.net/media
       												\n\nThe dictionary used is from:\nhttp://wordlist.sourceforge.net/</string>
    <string name="acknowledgements_title">Acknowledgements</string>

    <!-- Dabble stuff -->
    <string name="dabble_label">Dabble</string>
    <string name="dabble_title">Dabble!</string>
    <string name="dabble_hint">Here\'s a hint:</string>
    <string name="dabble_pause">Paused!</string>
    <string name="dabble_pause_text">Tap anywhere to continue.</string>
    <string name="dabble_game_over">Game Over!</string>
    <string name="dabble_game_over_text">Your final score is:</string>
    <string name="dabble_score">Final Score:</string>
    <string name="dabble_new_game">New Game</string>
    <string name="dabble_resume_game">Resume Game</string>
    <string name="dabble_acknowledgements">Acknowledgements</string>
    <string name="dabble_quit">Quit</string>
    <string name="dabble_acknowledgements_text">The Mario sound effects used are from:\nhttp://themushroomkingdom.net/media
       												\n\nThe song "Danger Zone" used is by Kenny Loggins and ripped from Youtube.
       												\n\nThe dictionary used is from:\nhttp://www.scrabblejunction.org/wordlists.htm</string>
    <string name="dabble_instructions">Instructions</string>
    <string name="dabble_instructions_text">Tap a tile to select it, and tap another tile to swap the two. Swap any two tiles until you form a valid word on each row!
        									\n\n For Real-Time Multiplayer mode: Complete a full solution before the other player in the given time limit. Shake your phone hard to use 
        									one of two shake-ups. These will allow you to randomly rearrange the opponent\'s board.
        									\n\n For Turn-Based Multiplayer Mode: Play the same board with your opponent, taking turns indivdually. Any word completed on your turn will count towards your score.</string>

    <!-- Dabble Communication stuff -->
    <string name="dabble_com_label">Communication</string>
    <string name="dabble_com_title">Dabble Communication</string>
    <string name="dabble_high_scores">High Scores</string>
    <string name="dabble_back">Back</string>
    <string name="dabble_username">Who are you?</string>
    <string name="dabble_enter_username">Please enter a username:</string>
    <string name="dabble_done">Done!</string>
    <string name="dabble_watch_game">Watch Game</string>
    <string name="dabble_watch_player">Choose a player to view their status and watch them play if they are in game!</string>

    <!-- Dabble Multiplayer stuff -->
    <string name="dabble_m_label">Two Player Dabble</string>
    <string name="dabble_multiplayer">Multiplayer</string>
    <string name="dabble_realtime">Real Time</string>
    <string name="dabble_turnbased">Turn Based</string>
    <string name="dabble_choose_player">Choose a (looking) player to challenge!</string>
    <string name="dabble_choose_player_turnbased">Select a game or create a new one!</string>
    <string name="dabble_challenge">Challenge!</string>
    <string name="dabble_new_game_challenge">New Game!</string>
    <string name="title_activity_tricky_stress_bt">TrickyStressBT</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tricky_stress_btresult">Bluetooth Result</string>
    <string name="title_activity_stress_blocker_main">Stress Blocker</string>
    <string name="title_activity_stress_blocker_settings">Settings</string>

</resources>
