<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:background="@color/background"
   android:gravity="center"
   android:padding="30dip">
   <TextView
      android:text="@string/main_title"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:layout_marginBottom="25dip"
      android:textSize="24.5sp" />
    <Button
      android:id="@+id/dabble_com_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/dabble_com_label" />
    <Button
      android:id="@+id/dabble_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/dabble_label" />
   <Button
      android:id="@+id/dictionary_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/dictionary_label" />
   <Button
      android:id="@+id/about_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/about_label" />
   <Button
      android:id="@+id/error_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/error_label" />
   <Button
      android:id="@+id/sudoku_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/sudoku_label" />
   <Button
      android:id="@+id/quit_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/quit_label" />
</LinearLayout>