<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dabble_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dip">

   <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:gravity="center"
        android:text="@string/tricky_phone_survey_info"
        android:textSize="16sp" />
        
   <Button
      android:id="@+id/tricky_phone_survey_button_label"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/tricky_phone_survey_button_label" />
   
   <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dip"
        android:layout_marginBottom="10dip"
        android:gravity="center"
        android:text="@string/tricky_periodic_survey_info"
        android:textSize="16sp" />
   
   <Button
      android:id="@+id/tricky_periodic_survey_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/tricky_periodic_survey_button_label" />
   
   <Button
      android:id="@+id/tricky_quit_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/tricky_quit" 
      android:layout_marginTop="20dp"/>


</LinearLayout>
