<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dip" >

    <FrameLayout
        android:id="@+id/word_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:background="@color/sudoku_background" >

    </FrameLayout>

    <EditText
        android:id="@+id/word_box"
        android:text="Enter word here!"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10" >
        <requestFocus />
    </EditText>

   <Button
      android:id="@+id/clear_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/clear_label" />
   <Button
      android:id="@+id/acknowledgements_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/acknowledgements_label" />
   <Button
      android:id="@+id/return_to_menu__button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/return_to_menu_label" />

</LinearLayout>